Fix paragraph spacing

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -15,5 +15,5 @@ h2 {
 }
 
 p {
-  margin: 0 0 var(--spacing);
+  margin: 0 0 var(--spacing-small);
 }
